Solved overflow issue by creating a site wide wrapper

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,6 @@ body, html {
     -webkit-overflow-scrolling: touch;
 }
 
-body {
+body > .wrapper {
     overflow-x: hidden;
 }
